# cloth

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile.api  Dockerfile.frontend  README.md  build-worker.js  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: cd.yml  ci.yml
cloth-api/: Cargo.toml  wrangler.toml
cloth-api/src/: lib.rs
cloth-core/: Cargo.toml
cloth-core/src/: data.rs
cloth-frontend/: package.json  tailwind.config.js  vite.config.ts  wrangler.toml
cloth-frontend/src/: App.tsx  index.ts
cloth-service/: Cargo.toml
docs/: architecture.md  authentication.md  contents.md  deployment.md  development.md  foundations.md  multi-tenancy.md  roadmap.md  tech-radar.md  template-usage.md  testing-strategy.md
docs/adr/: 0001-hybrid-local-first-consistency.md  0002-rust-webassembly-backend.md  0003-multi-language-sdk-strategy.md  0004-github-actions-ci.md  README.md
docs/bets/: 001-remix-control-plane.md
frontend/: index.html  package.json  vite.config.ts
frontend/app/: root.tsx
src/: auth.ts  data.ts  storage.ts  worker.ts
src/app/: App.tsx  data.ts
src/core/: error.ts  flag-service.ts  flag.ts
src/service/: api.ts  http-error.ts  types.ts
src/storage/: durable-object.ts
src/test/: setup.ts  storage.test.ts  worker.test.ts
tests/e2e/: package.json  playwright.config.ts
tests/fixtures/: flags.rs  mod.rs
tests/integration/: api_tests.rs
(+19 files in other folders)
