[package]
name = "cloth-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6"
wasm-bindgen = "0.2"
serde_json = "1.0"
js-sys = "0.3"
cloth-core = { path = "../cloth-core" }

# WASM optimization
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["wee_alloc"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
